# horizon-pure-ui

./: README.rst  UPGRADE_NOTES.md  pyproject.toml  requirements.txt  settings.json  setup.cfg  setup.py
horizon_pure/: overrides.py
horizon_pure/api/: cinder.py  pure_flash_array.py
horizon_pure/enabled/: _9999_pure_panel.py  _999_pure_panel.py
horizon_pure/local_settings.d/: _9999_pure_settings.py.example
horizon_pure/pure_panel/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
horizon_pure/pure_panel/flasharrays/: tabs.py  urls.py  views.py
horizon_pure/pure_panel/templates/project/volumes/: pure_detail_view.html
horizon_pure/pure_panel/templates/pure_panel/: index.html
horizon_pure/pure_panel/templates/pure_panel/flasharrays/: detail_view.html
