[build-system]
requires = ["setuptools>=61.0", "wheel", "pbr>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon-pure"
version = "2.0.0"
description = "A Pure Storage panel plugin for OpenStack Dashboard"
readme = "README.rst"
authors = [
    {name = "Pure Storage", email = "openstack-dev@purestorage.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: OpenStack",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "py-pure-client>=1.47.0",
    "pbr>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/PureStorage-OpenConnect/horizon-pure-ui"

[tool.setuptools]
packages = ["horizon_pure"]

