[metadata]
name = horizon_pure
summary = A Pure Storage panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Pure Storage
author_email = openstack-dev@purestorage.com
home-page = https://github.com/PureStorage-OpenConnect/horizon-pure-ui
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    horizon_pure