[metadata]
name = horizon_pure
summary = A Pure Storage panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Pure Storage
version = 2.0.0
author_email = openstack-dev@purestorage.com
home-page = https://github.com/PureStorage-OpenConnect/horizon-pure-ui
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    horizon_pure
